force-app/main/default/objects/Unit_Bundle__c/Unit_Bundle__c.object-meta.xml
<CustomObject>
    <label>Unit Bundle</label>
    <nameField>
        <label>Unit Bundle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unit Bundles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>