force-app/main/default/objects/Unit_Bundle__c/fields/Linked_Unit__c.field-meta.xml
<CustomField>
    <fullName>Linked_Unit__c</fullName>
    <label>Linked Unit</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>