force-app/main/default/objects/Unit_Bundle__c/fields/Negotiation_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Checklist__c</fullName>
    <label>Negotiation Checklist</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>