force-app/main/default/objects/Unit_Bundle__c/fields/Negotiation_Checklist_Generated__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Checklist_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Negotiation Checklist Generated</label>
    <type>Checkbox</type>
</CustomField>