force-app/main/default/objects/Unit_Bundle__c/fields/No_of_Negotiation_Checklist_Generated__c.field-meta.xml
<CustomField>
    <fullName>No_of_Negotiation_Checklist_Generated__c</fullName>
    <label>No of Negotiation Checklist Generated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>