force-app/main/default/objects/Unit_Bundle__c/fields/Number_Of_Base_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Base_Units__c</fullName>
    <label>Number Of Base Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>