force-app/main/default/objects/Unit_Bundle__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Unit Bundles</relationshipLabel>
    <relationshipName>Unit_Bundles</relationshipName>
    <type>Lookup</type>
</CustomField>