force-app/main/default/objects/Unit_Bundle__c/fields/Unit_UOM__c.field-meta.xml
<CustomField>
    <fullName>Unit_UOM__c</fullName>
    <label>Unit UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Area_UOM</valueSetName>
    </valueSet>
</CustomField>